@@ -1,8 +1,8 @@
 // Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.impl;
 
-import com.intellij.feedback.state.projectCreation.ProjectCreationInfoService;
-import com.intellij.feedback.state.projectCreation.ProjectCreationInfoState;
+import com.intellij.feedback.npw.state.ProjectCreationInfoService;
+import com.intellij.feedback.npw.state.ProjectCreationInfoState;
 import com.intellij.ide.JavaUiBundle;
 import com.intellij.ide.SaveAndSyncHandler;
 import com.intellij.ide.projectWizard.NewProjectWizardCollector;
@@ -10,7 +10,6 @@ import com.intellij.ide.util.newProjectWizard.AbstractProjectWizard;
 import com.intellij.ide.util.projectWizard.AbstractModuleBuilder;
 import com.intellij.ide.util.projectWizard.ProjectBuilder;
 import com.intellij.ide.util.projectWizard.WizardContext;
-import com.intellij.internal.statistic.StructuredIdeActivity;
 import com.intellij.internal.statistic.service.fus.collectors.FUCounterUsageLogger;
 import com.intellij.internal.statistic.utils.PluginInfo;
 import com.intellij.internal.statistic.utils.PluginInfoDetectorKt;
@@ -37,7 +36,8 @@ import com.intellij.openapi.vfs.VfsUtilCore;
 import com.intellij.openapi.wm.ToolWindow;
 import com.intellij.openapi.wm.ToolWindowId;
 import com.intellij.openapi.wm.ToolWindowManager;
-import com.intellij.util.ui.UIUtil;
+import com.intellij.ui.AppUIUtil;
+import com.intellij.util.TimeoutUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -64,22 +64,22 @@ public final class NewProjectUtil {
     Runnable warmUp = () -> ProjectManager.getInstance().getDefaultProject();  // warm-up components
     boolean proceed = ProgressManager.getInstance().runProcessWithProgressSynchronously(warmUp, title, true, null);
 
-    StructuredIdeActivity activity = null;
+    long time = 0;
+    WizardContext context = wizard.getWizardContext();
     if (isNewWizard()) {
-      WizardContext context = wizard.getWizardContext();
-      activity = NewProjectWizardCollector.logStarted(context.getProject());
+      time = System.nanoTime();
       NewProjectWizardCollector.logOpen(context);
     }
     if (proceed && wizard.showAndGet()) {
       createFromWizard(wizard);
-      if (isNewWizard() && activity != null) {
-        NewProjectWizardCollector.logFinished(activity, true);
+      if (isNewWizard()) {
+        NewProjectWizardCollector.logFinish(context, true, TimeoutUtil.getDurationMillis(time));
       }
       return;
     }
 
-    if (isNewWizard() && activity != null) {
-      NewProjectWizardCollector.logFinished(activity, false);
+    if (isNewWizard()) {
+      NewProjectWizardCollector.logFinish(context, false, TimeoutUtil.getDurationMillis(time));
     }
   }
 
@@ -98,8 +98,9 @@ public final class NewProjectUtil {
       return newProject;
     }
     catch (IOException e) {
-      UIUtil.invokeLaterIfNeeded(() -> Messages.showErrorDialog(e.getMessage(),
-                                                                JavaUiBundle.message("dialog.title.project.initialization.failed")));
+      AppUIUtil.invokeOnEdt(() -> {
+        Messages.showErrorDialog(e.getMessage(), JavaUiBundle.message("dialog.title.project.initialization.failed"));
+      });
       return null;
     }
   }
@@ -137,7 +138,7 @@ public final class NewProjectUtil {
 
     ProjectManagerEx projectManager = ProjectManagerEx.getInstanceEx();
     try {
-      Path projectFile = Paths.get(projectFilePath);
+      Path projectFile = Path.of(projectFilePath);
       Path projectDir;
       if (wizard.getStorageScheme() == StorageScheme.DEFAULT) {
         projectDir = projectFile.getParent();
